--- a/index.html
+++ b/index.html
@@ -6,43 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>TBD Bank</title>
   </head>
   <body>
     <div class="wrapper hidden" id="wrapper" onclick="handleModal"></div>
     <div class="modal hidden" id="login">
-        <form>
-            <h1>Login</h1>
-            <a class="close"><h2>X</h2></a>
-            <div>
-            <input type="text" placeholder="email">
-            <input type="text" placeholder="password">
+      <h1>Login</h1>
+      <a class="close"><h2>X</h2></a>
+      <form>
+        <div>
+          <input type="text" placeholder="email" />
+          <input type="text" placeholder="password" />
         </div>
-            <input type="button" value="GO">
-        </form>
+        <input type="button" value="GO" />
+      </form>
     </div>
     <div class="modal hidden" id="signup-1">
-        <form>
-            <h1>Sign Up</h1>
-            <a class="close"><h2>X</h2></a>
-            <div>
-            <input type="text" placeholder="First Name">
-            <input type="text" placeholder="Last Name">
-            <input type="text" placeholder="email">
-            <input type="text" placeholder="password">
+      <h1>Sign Up</h1>
+      <a class="close"><h2>X</h2></a>
+      <form>
+        <div>
+          <input type="text" placeholder="First Name" />
+          <input type="text" placeholder="Last Name" />
+          <input type="text" placeholder="email" />
+          <input type="text" placeholder="password" />
         </div>
-            <input type="button" value="NEXT">
-        </form>
+        <input type="button" value="NEXT" />
+      </form>
     </div>
     <div class="modal hidden" id="signup-2">
-        <form>
-            <h1>Sign Up</h1>
-            <a class="close"><h2>X</h2></a>
-            <div>
-            <input type="text" placeholder="confirm password">
+      <h1>Sign Up</h1>
+      <a class="close"><h2>X</h2></a>
+      <form>
+        <div>
+          <input type="text" placeholder="confirm password" />
         </div>
-            <input type="button" value="REGISTER">
-        </form>
+        <input type="button" value="REGISTER" />
+      </form>
     </div>
     <header>
       <h1>Revature</h1>
@@ -53,19 +54,22 @@
     </header>
     <main>
       <div>
-        <h3>Image of a woman browsing on her lapton while holding a swaddled newborn</h3>
+        <h3>
+          Image of a woman browsing on her lapton while holding a swaddled
+          newborn
+        </h3>
       </div>
       <div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error debitis
-          adipisci aperiam ipsa nobis fuga? Accusantium nostrum eveniet vel non
-          cum sit fugiat harum animi, repellendus nemo, fuga voluptatem beatae.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem
+          debitis nulla dolore harum corporis. Officiis voluptas corporis non,
+          a, incidunt, tenetur commodi dicta consequuntur minima labore neque
+          ratione voluptatum hic. Placeat labore dolorem, ducimus corrupti
+          libero qui fuga earum provident vitae laborum distinctio sapiente ipsa
+          eius culpa soluta suscipit consectetur.
         </p>
         <button>Get Started!</button>
       </div>
-
-      
-
     </main>
     <footer>&copy;TBD Bank 2047</footer>
   </body>
